[레거시 코드 리팩터링 - 2단계] 글렌(전석진) 미션 제출합니다. (#566)
* chore: application 설정 분리

- 확장자 properties -> yml 변경
- local, test 프로파일 분리

* refactor: Domain 객체 JPA Entity 적용

* feat: Repository 추가

* test: Repository 테스트 코드 추가

* refactor: Service Dao -> Repository 의존성 변경

* docs: 기능 요구 사항 반영

* refactor: 레거시 코드 패키지 분리

* refactor: new 서비스 코드 제거

* feat: KitchenPosException 추가

* feat: Money 값 타입 추가

* refactor: Product setter 제거, 값 타입 사용

* feat: Product Controller, Service 추가

* feat: Money greaterThan 메서드 추가

* feat: h2Truncate 외래키 제약 조건 제외 추가

* feat: Menu Controller Service 추가

* refactor: Money nullable false 추가

* feat: MenuGroup Controller, Service 추가

* chore: Money 메소드 이름 변경

* feat: OrderTable Controller Service 추가

* feat: Order Controller Service 추가

* refactor: MenuService 메소드 순서 변경

* refactor: MenuGroup 세터 삭제

* test: ValueSource -> EnumSource 변경

* refactor: findByIdIn -> findAllByIdIn 메소드 명 변경

* feat: Order isCompletion 메서드 추가

* feat: TableGroup Controller, Service 추가

* test: 테스트 코드 추가

* feat: GlobalExceptionHandler 추가

* docs: 요구 사항 목록 체크

* refactor: Price value -> amount 변경

* docs: 클래스 다이어그램 추가

* fix: Enumerated 추가

* refactor: getTableGroupId -> findTableGroupId 메서드명 변경

* docs: 잘못된 요구사항 수정

* refactor: 예외 응답 JSON 포맷으로 반환하도록 변경

* test: 통합 테스트 추가

* chore: TODO 제거