@@ -1,24 +1,28 @@
 package kitchenpos.application;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatNoException;
-import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.BDDMockito.any;
 import static org.mockito.BDDMockito.anyList;
 import static org.mockito.BDDMockito.anyLong;
 import static org.mockito.BDDMockito.given;
 
+import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import kitchenpos.dao.MenuDao;
-import kitchenpos.dao.OrderDao;
-import kitchenpos.dao.OrderLineItemDao;
-import kitchenpos.dao.OrderTableDao;
+import kitchenpos.domain.Menu;
+import kitchenpos.domain.MenuGroup;
+import kitchenpos.domain.Money;
 import kitchenpos.domain.Order;
-import kitchenpos.domain.OrderLineItem;
 import kitchenpos.domain.OrderStatus;
 import kitchenpos.domain.OrderTable;
+import kitchenpos.exception.KitchenPosException;
+import kitchenpos.repository.MenuRepository;
+import kitchenpos.repository.OrderRepository;
+import kitchenpos.repository.OrderTableRepository;
+import kitchenpos.ui.dto.OrderCreateRequest;
+import kitchenpos.ui.dto.OrderLineCreateRequest;
 import org.junit.jupiter.api.DisplayNameGeneration;
 import org.junit.jupiter.api.DisplayNameGenerator.ReplaceUnderscores;
 import org.junit.jupiter.api.Nested;
@@ -37,118 +41,96 @@ class OrderServiceTest {
     OrderService orderService;
 
     @Mock
-    MenuDao menuDao;
+    OrderRepository orderRepository;
 
     @Mock
-    OrderDao orderDao;
+    MenuRepository menuRepository;
 
     @Mock
-    OrderLineItemDao orderLineItemDao;
-
-    @Mock
-    OrderTableDao orderTableDao;
+    OrderTableRepository orderTableRepository;
 
     @Nested
     class create {
 
         @Test
-        void 주문_항목_목록이_비어있으면_예외() {
-            // given
-            Order order = new Order();
-
-            // when
-            order.setOrderLineItems(Collections.emptyList());
-
-            // then
-            assertThatThrownBy(() -> orderService.create(order))
-                .isInstanceOf(IllegalArgumentException.class);
-        }
-
-        @Test
-        void 주문_항목_목록의_메뉴_식별자의_갯수와_주문_항목_목록의_갯수가_맞지_않으면_예외() {
-            // given
-            Order order = new Order();
-            OrderLineItem orderLineItem = new OrderLineItem();
-            orderLineItem.setMenuId(1L);
-            order.setOrderLineItems(List.of(orderLineItem));
-
-            // when
-            given(menuDao.countByIdIn(anyList()))
-                .willReturn(0L);
-
-            // then
-            assertThatThrownBy(() -> orderService.create(order))
-                .isInstanceOf(IllegalArgumentException.class);
-        }
-
-        @Test
         void 주문_테이블_식별자에_대한_주문_테이블이_없으면_예외() {
             // given
-            Order order = new Order();
-            order.setOrderTableId(1L);
-            OrderLineItem orderLineItem = new OrderLineItem();
-            orderLineItem.setMenuId(1L);
-            order.setOrderLineItems(List.of(orderLineItem));
-            given(menuDao.countByIdIn(anyList()))
-                .willReturn(1L);
-
-            // when
-            given(orderTableDao.findById(anyLong()))
+            var orderLineCreateRequests = List.of(
+                new OrderLineCreateRequest(1L, 1),
+                new OrderLineCreateRequest(2L, 2)
+            );
+            var request = new OrderCreateRequest(4885L, orderLineCreateRequests);
+            given(orderTableRepository.findById(anyLong()))
                 .willReturn(Optional.empty());
 
-            // then
-            assertThatThrownBy(() -> orderService.create(order))
-                .isInstanceOf(IllegalArgumentException.class);
-        }
-
-        @Test
-        void 성공() {
-            // given
-            Order order = new Order();
-            order.setOrderTableId(1L);
-            OrderLineItem orderLineItem = new OrderLineItem();
-            orderLineItem.setMenuId(1L);
-            order.setOrderLineItems(List.of(orderLineItem));
-            OrderTable orderTable = new OrderTable();
-            orderTable.setId(1L);
-
-            given(menuDao.countByIdIn(anyList()))
-                .willReturn(1L);
-            given(orderTableDao.findById(anyLong()))
-                .willReturn(Optional.of(orderTable));
-            Order savedOrder = new Order();
-            savedOrder.setId(1L);
-            given(orderDao.save(any(Order.class)))
-                .willReturn(savedOrder);
-            OrderLineItem savedOrderLineItem = new OrderLineItem();
-            given(orderLineItemDao.save(any(OrderLineItem.class)))
-                .willReturn(savedOrderLineItem);
-
             // when & then
-            assertThatNoException()
-                .isThrownBy(() -> orderService.create(order));
+            assertThatThrownBy(() -> orderService.create(request))
+                .isInstanceOf(KitchenPosException.class)
+                .hasMessage("해당 주문 테이블이 없습니다. orderTableId=4885");
         }
-    }
-
-    @Nested
-    class findAll {
 
         @Test
-        void 성공() {
+        void 주문_목록_항목이_비어있으면_예외() {
             // given
-            Order order = new Order();
-            order.setId(1L);
-            given(orderDao.findAll())
-                .willReturn(List.of(order));
-            given(orderLineItemDao.findAllByOrderId(1L))
-                .willReturn(List.of(new OrderLineItem(), new OrderLineItem()));
+            List<OrderLineCreateRequest> orderLineCreateRequests = Collections.emptyList();
+            var request = new OrderCreateRequest(4885L, orderLineCreateRequests);
+            given(orderTableRepository.findById(anyLong()))
+                .willReturn(Optional.of(new OrderTable(4885L, false, 0)));
 
             // when
-            List<Order> actual = orderService.findAll();
+            assertThatThrownBy(() -> orderService.create(request))
+                .isInstanceOf(KitchenPosException.class)
+                .hasMessage("주문 목록 항목은 비어있을 수 없습니다.");
+        }
+
+        @Test
+        void 메뉴_식별자에_대한_메뉴가_없으면_예외() {
+            // given
+            var orderLineCreateRequests = List.of(
+                new OrderLineCreateRequest(1L, 1),
+                new OrderLineCreateRequest(2L, 2),
+                new OrderLineCreateRequest(4885L, 3),
+                new OrderLineCreateRequest(4886L, 4)
+            );
+            var request = new OrderCreateRequest(4885L, orderLineCreateRequests);
+            given(orderTableRepository.findById(anyLong()))
+                .willReturn(Optional.of(new OrderTable(4885L, false, 0)));
+            given(menuRepository.findByIdIn(anyList()))
+                .willReturn(List.of(
+                    new Menu(1L, "소주", Money.from(5000), new MenuGroup(1L, "주류")),
+                    new Menu(2L, "맥주", Money.from(6000), new MenuGroup(1L, "주류"))
+                ));
+
+            // when & then
+            assertThatThrownBy(() -> orderService.create(request))
+                .isInstanceOf(KitchenPosException.class)
+                .hasMessage("존재하지 않는 메뉴가 있습니다. notExistMenuIds=[4885, 4886]");
+        }
+
+        @Test
+        void 성공() {
+            // given
+            var orderLineCreateRequests = List.of(
+                new OrderLineCreateRequest(1L, 1),
+                new OrderLineCreateRequest(2L, 2)
+            );
+            var request = new OrderCreateRequest(4885L, orderLineCreateRequests);
+            given(orderTableRepository.findById(anyLong()))
+                .willReturn(Optional.of(new OrderTable(4885L, false, 0)));
+            given(menuRepository.findByIdIn(anyList()))
+                .willReturn(List.of(
+                    new Menu(1L, "소주", Money.from(5000), new MenuGroup(1L, "주류")),
+                    new Menu(2L, "맥주", Money.from(6000), new MenuGroup(1L, "주류"))
+                ));
+            given(orderRepository.save(any(Order.class)))
+                .willAnswer(invoke -> invoke.getArgument(0));
+
+            // when
+            var actual = orderService.create(request);
 
             // then
-            assertThat(actual).hasSize(1);
-            assertThat(actual.get(0).getOrderLineItems()).hasSize(2);
+            assertThat(actual.getOrderTableId()).isEqualTo(4885L);
+            assertThat(actual.getOrderStatus()).isEqualTo(OrderStatus.COOKING);
         }
     }
 
@@ -158,53 +140,28 @@ class OrderServiceTest {
         @Test
         void 주문_식별자에_대한_주문이_없으면_예외() {
             // given
-            Order order = new Order();
-            Long orderId = 1L;
-
-            // when
-            given(orderDao.findById(anyLong()))
+            given(orderRepository.findById(anyLong()))
                 .willReturn(Optional.empty());
-
-            // then
-            assertThatThrownBy(() -> orderService.changeOrderStatus(orderId, order))
-                .isInstanceOf(IllegalArgumentException.class);
-        }
-
-        @Test
-        void 찾은_주문이_COMPLETION_상태이면_예외() {
-            // given
-            Order order = new Order();
-            Long orderId = 1L;
-            Order savedOrder = new Order();
-            given(orderDao.findById(1L))
-                .willReturn(Optional.of(savedOrder));
-
             // when
-            savedOrder.setOrderStatus(OrderStatus.COMPLETION.name());
-
-            // then
-            assertThatThrownBy(() -> orderService.changeOrderStatus(orderId, order))
-                .isInstanceOf(IllegalArgumentException.class);
+            assertThatThrownBy(() -> orderService.changeOrderStatus(4885L, OrderStatus.COMPLETION))
+                .isInstanceOf(KitchenPosException.class)
+                .hasMessage("해당 주문이 없습니다. orderId=4885");
         }
 
         @Test
         void 성공() {
             // given
-            Order order = new Order();
-            order.setOrderStatus(OrderStatus.COMPLETION.name());
-            Long orderId = 1L;
-            Order savedOrder = new Order();
-            savedOrder.setOrderStatus(OrderStatus.COOKING.name());
-            given(orderDao.findById(1L))
-                .willReturn(Optional.of(savedOrder));
-            given(orderLineItemDao.findAllByOrderId(1L))
-                .willReturn(List.of(new OrderLineItem()));
+            LocalDateTime orderedTime = LocalDateTime.parse("2023-10-15T22:40:00");
+            OrderTable orderTable = new OrderTable(1L, false, 0);
+            Order order = new Order(4885L, OrderStatus.COOKING, orderedTime, orderTable);
+            given(orderRepository.findById(anyLong()))
+                .willReturn(Optional.of(order));
 
             // when
-            Order actual = orderService.changeOrderStatus(orderId, order);
+            orderService.changeOrderStatus(4885L, OrderStatus.COMPLETION);
 
             // then
-            assertThat(actual.getOrderStatus()).isEqualTo(OrderStatus.COMPLETION.name());
+            assertThat(order.getOrderStatus()).isEqualTo(OrderStatus.COMPLETION);
         }
     }
 }
